# jet-live

./: .clang-format  .clang-tidy  .dir-locals.el  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: jet_live_setup.cmake
example/: CMakeLists.txt
example/src/: ExampleDelegate.cpp  ExampleDelegate.hpp  ExampleListener.cpp  ExampleListener.hpp  SimpleCommandInterpreter.cpp  SimpleCommandInterpreter.hpp  main.cpp
libs/ELFIO/elfio/: elfio.hpp  elfio_section.hpp  elfio_segment.hpp
libs/argh/include/: argh.h
libs/efsw/src/efsw/: FileWatcherFSEvents.hpp
libs/teenypath/: LICENSE  README.md
libs/teenypath/include/: teenypath.h
libs/teenypath/src/: teenypath.cpp
libs/tiny-process-library/: process.cpp  process.hpp  process_unix.cpp  process_win.cpp
libs/utils/: utils.hpp
libs/utils/small_vector/: LICENSE.txt  small_vector.hpp
libs/utils/string_view/: string_view.hpp
scripts/: example.lua  genie.lua  jet-live.lua
src/jet/live/: AsyncEventQueue.cpp  AsyncEventQueue.hpp  BuildConfig.cpp  BuildConfig.hpp  CodeReloadPipeline.cpp  CodeReloadPipeline.hpp  CompileCommandsCompilationUnitsParser.cpp  CompileCommandsCompilationUnitsParser.hpp  Compiler.cpp  Compiler.hpp  DataTypes.hpp  DefaultProgramInfoLoader.hpp  DefaultSymbolsFilter.cpp  DefaultSymbolsFilter.hpp  DepfileDependenciesHandler.cpp  DepfileDependenciesHandler.hpp  FileWatcher.cpp  FileWatcher.hpp  FunctionsHookingStep.cpp  FunctionsHookingStep.hpp  ICodeReloadPipelineStep.hpp  ICompilationUnitsParser.hpp  IDependenciesHandler.hpp  IEvent.hpp  ILiveListener.hpp  IProgramInfoLoader.hpp  ISymbolsFilter.hpp  LinkCommand.hpp  LinkTimeRelocationsStep.cpp  LinkTimeRelocationsStep.hpp  Live.cpp  Live.hpp  LiveConfig.hpp  LiveContext.hpp  LiveDelegate.cpp  LiveDelegate.hpp  SignalReloader.cpp  SignalReloader.hpp  StaticsCopyStep.cpp  StaticsCopyStep.hpp  (+4 more)
src/jet/live/_linux/: ElfProgramInfoLoader.cpp  ElfProgramInfoLoader.hpp  LinkCommand.cpp  Symbols.cpp  Utility.cpp
tests/: CMakeLists.txt
tests/src/: ClassInstanceMethod_test.cpp  ClassStaticMethod.hpp  ClassStaticMethod_test.cpp  ClassVirtualMethod.cpp  ClassVirtualMethod_test.cpp  GlobalFreeFunction.cpp  GlobalFreeFunction_test.cpp  Globals.hpp  IClassVirtualMethod.hpp  InternalLinkageFunction.cpp  InternalLinkageFunction.hpp  InternalLinkageFunction_test.cpp  LambdaFunction.cpp  LambdaFunction.hpp  LambdaFunctionWithCapturesBadCase.cpp  LambdaFunctionWithCapturesBadCase.hpp  LambdaFunctionWithCapturesBadCase2.hpp  LambdaFunctionWithCapturesBadCase2_test.cpp  LambdaFunctionWithCapturesBadCase_test.cpp  LambdaFunctionWithCapturesGoodCase.cpp  LambdaFunctionWithCapturesGoodCase_test.cpp  LambdaFunctionWithCaptures_test.cpp  LambdaFunction_test.cpp  Stacktrace.cpp  Stacktrace.hpp  StaticFunctionLocalVariable.cpp  StaticFunctionLocalVariable.hpp  StaticFunctionLocalVariable_test.cpp  StaticInternalVariable.cpp  StaticInternalVariable.hpp  StaticInternalVariable_test.cpp  StaticVariable.hpp  StaticVariable_test.cpp  TestDelegate.cpp  TestDelegate.hpp  TestListener.cpp  TestListener.hpp  WaitForReload.cpp  WaitForReload.hpp  main.cpp
tests/src/bad/: LambdaFunctionWithCapturesBadCase2_test.cpp  LambdaFunctionWithCapturesBadCase_test.cpp  StaticFunctionLocalVariableAddress_test.cpp  StaticInternalVariableAddress_test.cpp  StaticVariableAddress_test.cpp
tests/src/good/: ArrayRelocation_test.cpp  ClassInstanceMethod_test.cpp  ClassStaticMethod_test.cpp  ClassVirtualMethod_test.cpp  CommonSection_test.cpp  ExternGlobalVariableAddress_test.cpp  ExternGlobalVariable_test.cpp  FailedCompilationCrash_test.cpp  GlobalFreeFunction_test.cpp  GlobalVariableAddress_test.cpp  GlobalVariable_test.cpp  InternalLinkageFunction_test.cpp  LambdaFunctionWithCapturesGoodCase_test.cpp  LambdaFunctionWithCaptures_test.cpp  LambdaFunction_test.cpp  LostModification_test.cpp  MacosFunctionOutOfScope_test.cpp  ModifyFileDuringReload_test.cpp  MultipleDefinitions_test.cpp  NewCompilationUnit_test.cpp  NewHeaderDependency_test.cpp  OneFrameCompileReload_test.cpp  ReloadAfterFailedCompilation_test.cpp  ReloadOnSignal_test.cpp  SeveralReloads_test.cpp  StaticFunctionLocalVariableAddress_test.cpp  StaticFunctionLocalVariable_test.cpp  StaticInternalVariableAddress_test.cpp  StaticInternalVariable_test.cpp  StaticVariableAddress_test.cpp  StaticVariableSameName_test.cpp  StaticVariable_test.cpp  UndefinedSymbolDeep_test.cpp  UndefinedSymbol_test.cpp
tests/src/utility/: ArrayRelocation.cpp  ArrayRelocation.hpp  ClassInstanceMethod.cpp  ClassInstanceMethod.hpp  ClassStaticMethod.cpp  ClassVirtualMethod.cpp  ClassVirtualMethod.hpp  CommonSection.c  CommonSection.h  ExternGlobalVariable.cpp  ExternGlobalVariable.hpp  ExternGlobalVariableAddress.cpp  ExternGlobalVariableAddress.hpp  FailedCompilationCrash.cpp  FailedCompilationCrash.hpp  GlobalFreeFunction.cpp  GlobalFreeFunction.hpp  GlobalVariable.cpp  GlobalVariable.hpp  GlobalVariableAddress.cpp  GlobalVariableAddress.hpp  InternalLinkageFunction.cpp  LambdaFunction.cpp  LambdaFunctionWithCaptures.cpp  LambdaFunctionWithCaptures.hpp  LambdaFunctionWithCapturesBadCase.cpp  LambdaFunctionWithCapturesBadCase2.cpp  LambdaFunctionWithCapturesGoodCase.cpp  LambdaFunctionWithCapturesGoodCase.hpp  LostModification.cpp  LostModification.hpp  LostModification2.cpp  LostModification2.hpp  MacosFunctionOutOfScope.cpp  MacosFunctionOutOfScope.hpp  ModifyFileDuringReload.cpp  ModifyFileDuringReload.hpp  MultipleDefinitions.cpp  MultipleDefinitions.hpp  NewCompilationUnit.cpp  (+36 more)
tests/src/utility/MultipleDefinitions/: MultipleDefinitions1.cpp  MultipleDefinitions1.hpp  MultipleDefinitions2.cpp  MultipleDefinitions2.hpp
tests/src/utility/NewCompilationUnit/: NewCompilationUnit2.cpp  NewCompilationUnit2.hpp
tests/src/utility/NewHeaderDependency/: NewHeaderDependency2.hpp
tests/src/utility/UndefinedSymbolDeep/: UndefinedSymbolDeep1.cpp  UndefinedSymbolDeep1.hpp  UndefinedSymbolDeep2.cpp  UndefinedSymbolDeep2.hpp
tools/format/: format.sh
tools/tests/: test_runner.py
tools/tidy/: run-clang-tidy.py  tidy.py
(+8 files in other folders)
